# pi-bake

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  ROADMAP.md  feature_request.md  ngnix_setup.md  pi-bake.example.yaml  pyproject.toml  release_notes.md  tested_bakes.yaml
.github/workflows/: workflow.yml
design/: #3_study.md  infra_pxe.md  pibakehub-v1.md
examples/: README.md  _smoketest-alpine-ext4.yaml  _smoketest-alpine-pxe.yaml  _smoketest-raspbian.yaml  pi-5-alpine-ext4.yaml  pi-5-be200-edge.yaml  pi-5-can-rs485.yaml  pi-5-raspbian-bookworm.yaml  pi-5-raspbian-trixie.yaml  pi-5-wired-dhcp.yaml  pi-cm4-alpine-pxe.yaml  pi-cm4-raspbian-pxe.yaml  pi-zero-2-w-wifi-station.yaml  pi-zero-w-armhf.yaml
pibakehub-pilot/: README.md
pibakehub-pilot/intel/be200/: fragment.yaml
pibakehub-pilot/waveshare/ai-hat-plus/: fragment.yaml
pibakehub-pilot/waveshare/fan-hat/: fragment.yaml
pibakehub-pilot/waveshare/m2-hat-plus/: fragment.yaml
pibakehub-pilot/waveshare/poe-hat-f/: fragment.yaml
pibakehub-pilot/waveshare/power-management-hat/: fragment.yaml
pibakehub-pilot/waveshare/rs485-can-hat/: fragment.yaml
pibakehub-pilot/waveshare/wm8960-audio-hat/: fragment.yaml
scripts/: release-notes.sh  remote-bake.sh  setup-nfs-container.sh  teardown-nfs-container.sh
src/pi_bake/: __init__.py  alpine.py  alpine_edge.py  alpine_ext4.py  alpine_pxe.py  apkfetch.py  bake.py  boards.py  cli.py  config.py  debian.py  download.py  fedora.py  host_keys.py  imgxz.py  oses.py  raspbian.py  raspbian_pxe.py  recipe.py  tested.py
tests/: test_alpine_edge.py  test_alpine_ext4.py  test_alpine_pxe.py  test_apkfetch.py  test_apkovl.py  test_bake_dispatch.py  test_catalogs.py  test_config.py  test_host_keys.py  test_imgxz.py  test_raspbian_firstrun.py  test_raspbian_pxe.py  test_recipe.py  test_tested.py
tools/: img-to-tftp.sh  pibakehub_compose.py
