[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-bake"
version = "0.1.0"
description = "Generate flashable, headless Raspberry Pi images (no setup-alpine, no rpi-imager-pre-fill required)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Kurt Godwin", email = "kurtgo@hotmail.com" }]
requires-python = ">=3.9"
keywords = ["raspberry-pi", "alpine", "raspbian", "headless", "image", "sd-card"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Boot",
    "Topic :: System :: Installation/Setup",
]
# Pure stdlib at the Python level. Runtime depends on `mtools` +
# `dosfstools` on PATH (Alpine baker) and `losetup` (raspbian
# baker, when implemented in v0.2). Operator installs those via
# their distro package manager.
dependencies = []

[project.urls]
Homepage = "https://github.com/kgodwin/pi-bake"
Issues   = "https://github.com/kgodwin/pi-bake/issues"

[project.scripts]
pi-bake = "pi_bake.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
