[build-system]
requires = ["setuptools>=68", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
# PyPI distribution name is `py-pi-bake` (`pi-bake` was unavailable
# on PyPI). The import name + console_script stay `pi_bake` /
# `pi-bake`, so users `pip install py-pi-bake` then run
# `pi-bake build ...`.
name = "py-pi-bake"
# Version is derived from the latest git tag via setuptools_scm.
# `git tag v0.0.5 && git push --tags` releases 0.0.5; no version
# string lives in source. CI needs fetch-depth: 0 so tags reach
# the build environment.
dynamic = ["version"]
description = "Generate flashable, headless Raspberry Pi images (no setup-alpine, no rpi-imager-pre-fill required)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Kurt Godwin", email = "kurtgo@hotmail.com" }]
requires-python = ">=3.9"
keywords = ["raspberry-pi", "alpine", "raspbian", "headless", "image", "sd-card"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Boot",
    "Topic :: System :: Installation/Setup",
]
# Python deps minimal. PyYAML added in v0.0.5 for YAML recipe
# support (`pi-bake build --config <yaml>` + `--to-yaml`). System
# tools at runtime: `mtools` + `dosfstools` on PATH (Alpine baker)
# and `losetup` (raspbian baker, when implemented in v0.2).
# Operator installs those via their distro package manager.
dependencies = [
    "PyYAML>=5.4",
]

[project.urls]
Homepage = "https://github.com/kurt-cb/pi-bake"
Issues   = "https://github.com/kurt-cb/pi-bake/issues"

[project.scripts]
pi-bake = "pi_bake.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
# Tags like `v0.0.4` map to version `0.0.4`. Untagged commits get
# a dev suffix (0.0.5.dev3+g<sha>), which pip + PyPI both accept.
